# cpp-cmake-gtest-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
chess/: CMakeLists.txt
chess/common/: CMakeLists.txt  CharUtil.h  StringUtil.cpp  StringUtil.h
chess/common/tests/: CMakeLists.txt  CharUtilTest.cpp  StringUtilTest.cpp
chess/datastruct/: CMakeLists.txt  linklist.cpp  linklist.h
chess/datastruct/tests/: CMakeLists.txt  linklist_test.cpp
chess/soundex/: CMakeLists.txt  Soundex.h
chess/soundex/tests/: CMakeLists.txt  SoundexTest.cpp
